// Copyright 2024 lack
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// This file was autogenerated by goproto-gen. Do not edit it manually!

syntax = 'proto3';

package github.com.olive_io.olive.api.meta;

// Package-wide variables from generator "generated".
option go_package = "github.com/olive-io/olive/api/meta";

// +gogo:genproto=true
// +gogo:deepcopy=true
// +gogo:deepcopy:interfaces=github.com/olive-io/olive/api.Object
message Custom {
  TypeMeta typeMeta = 1;

  ObjectMeta metadata = 2;

  string host = 3;

  string username = 4;

  string password = 5;
}

// +gogo:genproto=true
// +gogo:deepcopy=true
message ObjectMeta {
  string name = 1;

  string uid = 2;

  string description = 3;

  int64 creationTimestamp = 4;

  int64 updateTimestamp = 5;

  int64 deletionTimestamp = 6;

  int64 version = 7;

  map<string, string> labels = 8;
}

// +gogo:genproto=true
// +gogo:deepcopy=true
message TypeMeta {
  string kind = 1;

  string apiVersion = 2;
}

